# flatcc

./: CMakeLists.txt  README.md
.github/workflows/: ci-more.yml  ci.yml
cmake/: FlatccGenerateSources.cmake  flatcc-config.cmake.in  flatccCli-config.cmake.in  flatccTests.cmake  flatcccli-config.cmake.in  flatccruntime-config.cmake.in
samples/monster/: CMakeLists.txt
samples/reflection/: CMakeLists.txt
scripts/: diff.py  diff.sh  tee.py  tee.sh
src/cli/: CMakeLists.txt
src/compiler/: CMakeLists.txt
src/runtime/: CMakeLists.txt
test/: CMakeLists.txt
test/cgen_test/: CMakeLists.txt
test/cmake/: x86_64-w64-mingw32-toolchain.cmake
test/emit_test/: CMakeLists.txt
test/flatc_compat/: CMakeLists.txt
test/install_test/: CMakeLists.txt
test/install_test/test_find_all/: CMakeLists.txt
test/install_test/test_find_components/: CMakeLists.txt
test/json_test/: CMakeLists.txt
test/load_test/: CMakeLists.txt
test/monster_test/: CMakeLists.txt
test/monster_test_concat/: CMakeLists.txt
test/monster_test_cpp/: CMakeLists.txt
test/monster_test_prefix/: CMakeLists.txt
test/monster_test_solo/: CMakeLists.txt
test/optional_scalars_test/: CMakeLists.txt
test/references/: 00_AUTOGENERATED  bfbs2json.stdout.txt  cgen_test.stderr.txt  cgen_test.stdout.txt  emit_test.stderr.txt  emit_test.stdout.txt  flatcc_compat.stderr.txt  monster.stdout.txt  monster_test.stderr.txt  monster_test.stdout.txt  optional_scalars_test.stdout.txt  reflection_test.stdout.txt  test_basic_parse.stderr.txt  test_json_parser.stderr.txt  test_json_parser.stdout.txt  test_json_printer.stderr.txt
test/reflection_test/: CMakeLists.txt
